# iterative-idea-polisher

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSIONING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AIR_GAP_ANALYSIS.md  DECISIONS.md  EVALUATION.md  EVALUATION_RESULTS.md  REVIEWER_GUIDE.md  SYSTEM_ANALYSIS.md  SYSTEM_PERFORMANCE.md
scripts/: analyze_system.py  demo.py  evaluate_air_gap_cases.py  evaluate_metrics.py  evaluate_prompt_variants.py  ollama_smoke.py  provider_smoke.py  quality_gate.py  run_reviewer_console.cmd  run_reviewer_console.ps1
src/idea_polisher/: __init__.py  api.py  config.py  db.py  llm.py  main.py  models.py  schemas.py  service.py
src/videoedgeai_task/: __init__.py  api.py  config.py  db.py  llm.py  main.py  models.py  review.py  schemas.py  service.py  ui.py  utils.py
tests/: conftest.py  test_api.py  test_llm.py  test_service.py  test_utils.py
